添加导航栏

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <header>
+        
+    </header>
+    <nav>
+        <div class="content">
+            <ul>
+                <li><a href="javascript:;">个人中心</a></li>
+                <li><a href="javascript:;">照片墙</a></li>
+                <li><a href="javascript:;">日志</a></li>
+                <li><a href="javascript:;">vlog</a></li>
+            </ul>
+        </div></nav>
     <main></main>
     <footer></footer>
 </body>
