内容模块简单布局

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,17 @@
     <title>蓉的个人主页</title>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./libs/css/bootstrap.min.css">
+    <script src="./libs/js/jquery-1.12.4.min.js"></script>
+    <script src="./libs/js/bootstrap.min.js"></script>
 </head>
+
 <body>
     <header>
-        
+        <div class="content">
+            <span class="glyphicon glyphicon-grain logo" aria-hidden="true"></span>
+        </div>
+
     </header>
     <nav>
         <div class="content">
@@ -20,8 +28,16 @@
                 <li><a href="javascript:;">日志</a></li>
                 <li><a href="javascript:;">vlog</a></li>
             </ul>
-        </div></nav>
-    <main></main>
+        </div>
+    </nav>
+    <main>
+        <div class="content">
+            <div class="personal"></div>
+            <div class="picture_list"></div>
+            <div class="vlog_list"></div>
+        </div>
+    </main>
     <footer></footer>
 </body>
+
 </html>
